Adicionado a pasta static e suas configurações

--- a/biblioteca/templates/index.html
+++ b/biblioteca/templates/index.html
@@ -1,7 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Página Inicial</title>
+    <title>Biblioteca Virtual</title>
+    <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
 </head>
 <body>
     <h1>Bem-vindo à Biblioteca Virtual!</h1>
