Criado a Url do App e seu Caminho no Index.html

--- a/biblioteca/templates/index.html
+++ b/biblioteca/templates/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Bem-vindo à Biblioteca Virtual!</h1>
-    <a href="{% url 'registro' %}">Registro</a> | <a href="{% url 'login' %}">Login</a>
+    <a href="{% url 'usuario:register' %}">Registro</a> | <a href="{% url 'login' %}">Login</a>
 </body>
 </html>
