--- a/biblioteca/apps/livros/templates/livros/base.html
+++ b/biblioteca/apps/livros/templates/livros/base.html
@@ -1,7 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+
     <title>Biblioteca</title>
 </head>
 <body>
