--- a/biblioteca/apps/livros/templates/livros/form.html
+++ b/biblioteca/apps/livros/templates/livros/form.html
@@ -11,8 +11,8 @@
             </div>
 
             <div class="form-actions">
-                <button type="submit" class="btn btn-save">💾 Salvar</button>
-                <a href="{% url 'listar_livros' %}" class="btn btn-cancel">❌ Cancelar</a>
+                <button type="submit" class="btn btn-save">Salvar</button>
+                <a href="{% url 'listar_livros' %}" class="btn btn-cancel">Cancelar</a>
             </div>
         </form>
     </div>
