--- a/biblioteca/apps/usuario/templates/usuario/login.html
+++ b/biblioteca/apps/usuario/templates/usuario/login.html
@@ -1,29 +1,37 @@
+{%  load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/login_register-estilo.css' %}">
     <title>Login</title>
 </head>
 <body>
-    <h2>Login</h2>
+    
 
     {% if form.non_field_errors %}
         <p style="color: red;">{{ form.non_field_errors.0 }}</p>
     {% endif %}
 
     <form method="post">
+        <h2>Login</h2>
         {% csrf_token %}
         
-        <label for="id_cpf">CPF:</label>
-        <input type="text" name="cpf" id="id_cpf" required>
-
-        <label for="id_password">Senha:</label>
-        <input type="password" name="password" id="id_password" required>
-
+        <div class="form-group">
+          <label for="id_cpf">CPF:</label>
+          <input type="text" name="cpf" id="id_cpf" required>
+        </div>
+        
+        <div class="form-group">
+          <label for="id_password">Senha:</label>
+          <input type="password" name="password" id="id_password" required>
+        </div>
+        
         <button type="submit">Entrar</button>
+
+        <p>Não tem uma conta? <a href="{% url 'usuario:register' %}">Registre-se</a></p>
     </form>
 
-    <p>Não tem uma conta? <a href="{% url 'usuario:register' %}">Registre-se</a></p>
 </body>
 </html>
