--- a/biblioteca/apps/usuario/templates/usuario/register.html
+++ b/biblioteca/apps/usuario/templates/usuario/register.html
@@ -1,16 +1,51 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
+    <link rel="stylesheet" href="{% static 'css/login_register-estilo.css' %}">
 </head>
 <body>
-    <h2>Registro</h2>
+    
     <form method="post">
+        <h2>Registro</h2>
         {% csrf_token %}
-        {{ form.as_p }}
+
+        <div class="form-group">
+            <label for="{{ form.username.id_for_label }}">Nome de usuário:</label>
+            {{ form.username }}
+            <div class="error">{{ form.username.errors }}</div>
+        </div>
+
+        <div class="form-group">
+            <label for="{{ form.email.id_for_label }}">E-mail:</label>
+            {{ form.email }}
+            <div class="error">{{ form.email.errors }}</div>
+        </div>
+
+        <div class="form-group">
+            <label for="{{ form.cpf.id_for_label }}">CPF:</label>
+            {{ form.cpf }}
+            <div class="error">{{ form.cpf.errors }}</div>
+        </div>
+
+        <div class="form-group">
+            <label for="{{ form.password1.id_for_label }}">Senha:</label>
+            {{ form.password1 }}
+            <div class="error">{{ form.password1.errors }}</div>
+        </div>
+
+        <div class="form-group">
+            <label for="{{ form.password2.id_for_label }}">Confirme a senha:</label>
+            {{ form.password2 }}
+            <div class="error">{{ form.password2.errors }}</div>
+        </div>
+
         <button type="submit">Registrar</button>
+
+        <p>Já tem uma conta? <a href="{% url 'usuario:login' %}">Entre aqui</a></p>
     </form>
 </body>
 </html>
