--- a/biblioteca/apps/livros/templates/livros/listar.html
+++ b/biblioteca/apps/livros/templates/livros/listar.html
@@ -1,13 +1,26 @@
 {% extends 'livros/base.html' %}
 
 {% block content %}
-    <div class="container">
-        <h2 class="page-title">📚 Meus Livros</h2>
-        <a href="{% url 'usuario:login' %}">Sair</a>
-        <a href="{% url 'adicionar_livro' %}" class="btn btn-add"> Adicionar Livro</a>
+    
+        <nav class="navbar">
+          <div class="logo">Biblioteca Virtual</div>
+          <div class="deco-btn-sair-nav">
+            <div class="logo">{{ request.user.username }}</div>
+            <a class="deco-btn-sair-nav" href="{% url 'usuario:login' %}">Sair</a>
+          </div>
+        </nav>
+        <div class="container">
+        <a href="{% url 'adicionar_livro' %}" class="btn btn-add"> 
+            <i class="bi bi-plus"></i>Adicionar Livro
+        </a>
         <div class="livros-list">
             {% for livro in livros %}
                 <div class="livro-card">
+                    <div class="livro-capa">
+                    <div  style="background-color: {{ livro.cor }}; width: 150px; height: 200px; border-radius: 2px;">
+                    </div>
+                    </div>
+                
                     <div class="livro-details">
                         <h3 class="livro-title">{{ livro.titulo }}</h3>
                         <p class="livro-info"><strong>Autor:</strong> {{ livro.autor }}</p>
@@ -15,11 +28,8 @@
                         <p class="livro-info"><strong>Páginas:</strong> {{ livro.paginas }}</p>
                     </div>
                     <div class="livro-footer">
-                        <span class="livro-usuario">👤 <strong>Cadastrado por:</strong> {{ livro.usuario.username }}</span>
-                        <div class="livro-actions">
                             <a href="{% url 'editar_livro' livro.id %}" class="btn btn-edit">Editar</a>
                             <a href="{% url 'excluir_livro' livro.id %}" class="btn btn-delete">Excluir</a>
-                        </div>
                     </div>
                 </div>
             {% endfor %}
