--- a/biblioteca/static/css/estilos.css
+++ b/biblioteca/static/css/estilos.css
@@ -1,14 +1,11 @@
 body {
     background-color:rgb(255, 255, 255);
+    margin: 0;
 }
 
 
 /* Designer da Tela de Listar os Livros */
 
-.page-title {
-    font-family: 'Poppins', sans-serif;
-
-}
 
 /* === BOTÕES GERAIS === */
 .btn {
@@ -22,14 +19,20 @@ body {
     transition: all 0.3s ease-in-out;
 }
 
+.bi {
+    font-size: 24px;
+}
+
 /* === BOTÃO "ADICIONAR LIVRO" === */
 .btn-add {
-    background: linear-gradient(135deg, #27ae60, #2ecc71);
+    background: #000;
     display: inline-block;
     margin-bottom: 20px;
-    box-shadow: 0 4px 10px rgba(39, 174, 96, 0.4);
-    animation: pulse 1.5s infinite; 
+    box-shadow: 0 4px 10px rgba(67, 68, 67, 0.4);
+    animation: pulse 2.5s infinite; 
     font-family: 'Poppins', sans-serif;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Efeito de pulsação */
@@ -68,6 +71,13 @@ body {
 }
 
 /* === CONTAINER DOS LIVROS === */
+.container {
+    margin: 20px;
+    margin-top: 100px;
+}
+
+
+
 .livros-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -78,16 +88,16 @@ body {
 /* === CARTÃO DO LIVRO === */
 .livro-card {
     background-color: #fff;
-    border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 2px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.09);
     padding: 20px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    transition: transform 0.5s ease, box-shadow 0.5s ease;
 }
 
 /* Efeito hover nos cartões */
 .livro-card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+    transform: scale(1.01);
+    box-shadow: 0 8px 16px rgba(86, 85, 85, 0.15);
 }
 
 /* === DETALHES DO LIVRO === */
@@ -98,6 +108,12 @@ body {
 
 }
 
+.livro-capa {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .livro-info {
     font-family: "Arial";
 }
@@ -105,27 +121,10 @@ body {
 /* === RODAPÉ DO LIVRO (USUÁRIO E BOTÕES) === */
 .livro-footer {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
 }
 
-/* === ESTILO DO NOME DO USUÁRIO === */
-.livro-usuario {
-    font-family: "Arial";
-    font-size: 0.9em;
-    color: #7f8c8d;
-    font-weight: bold;
-    background: linear-gradient(135deg, #bdc3c7, #ecf0f1);
-    padding: 5px 10px;
-    border-radius: 5px;
-    transition: background 0.3s ease-in-out;
-}
-
-/* Hover no nome do usuário */
-.livro-usuario:hover {
-    background: linear-gradient(135deg, #ecf0f1, #bdc3c7);
-    transform: scale(1.05);
-}
 
 /* Designer do Formulário de Adicionar/Editar Livros */
 
@@ -198,77 +197,85 @@ input:focus, select:focus, textarea:focus {
 
 /* === AÇÕES DO FORMULÁRIO === */
 .form-actions {
-    display: flex;
-    justify-content: space-between;
+    display: contents;
     margin-top: 20px;
 }
 
 /* === BOTÃO "SALVAR" === */
 .btn-save {
-    background: linear-gradient(135deg, #2ecc71, #27ae60);
-    color: white;
+    width: 100%;
     padding: 12px 20px;
-    font-size: 1.1em;
-    font-weight: bold;
-    border-radius: 8px;
-    cursor: pointer;
+    background-color:rgb(0, 0, 0);
+    color: white;
     border: none;
-    transition: all 0.3s ease-in-out;
-    font-family: "Arial";
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 18px;
+    text-decoration: none;
 }
 
 .btn-save:hover {
-    background: linear-gradient(135deg, #27ae60, #219150);
-    transform: scale(1.05);
-    box-shadow: 0 4px 15px rgba(39, 174, 96, 0.5);
+    transform: scale(1.01);
+    background-color:rgb(31, 32, 31);
 }
 
 /* === BOTÃO "CANCELAR" === */
 .btn-cancel {
-    background: linear-gradient(135deg, #e74c3c, #c0392b);
-    color: white;
+    border: 2px solid #000000;
+    color: black;
     padding: 12px 20px;
-    font-size: 1.1em;
-    font-weight: bold;
-    border-radius: 8px;
+    font-size: 18px;
+    border-radius: 4px;
     text-decoration: none;
     display: inline-block;
-    transition: all 0.3s ease-in-out;
     font-family: "Arial";
 }
 
 .btn-cancel:hover {
-    background: linear-gradient(135deg, #c0392b, #a93226);
-    transform: scale(1.05);
-    box-shadow: 0 4px 15px rgba(231, 76, 60, 0.5);
+    background-color:rgb(200, 202, 200);
+    transform: scale(1.01);
 }
 
 /*== Div dos conteudos do index.html ==*/
 .index_principal {
     display: flex;
-    justify-content: space-between;
+    height: 100vh;
+}
+
+.index_conteudo, .index_imagem {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    padding: 20px;
 }
 
 .index_conteudo {
-    width: 500px;
-    padding: 40px;
-    background-color:rgb(205, 221, 226);
-    border-radius: 15px;
-    height: 100vh;
+    flex-direction: column;
+    padding-left: 50px;
+
+}
+
+.index_imagem {
+    background-color:#fff;
+}
+
+.btn-nav {
+    margin-right: 15px
 }
 
 /* == Botão Registrar e login==*/
 .btn-registrar {
     background-color:rgb(18, 18, 18);
-    padding: 15px;
+    padding: 15px 20px;
     border-radius: 30px;
     margin-right: 20px;
 }
 
 .btn-login {
     border-radius: 30px;
-    padding: 15px;
-    border: 3px solid #181818;
+    padding: 15px 25px;
+    border: 2px solid #181818;
 }
 
 .deco-btn-registrar {
@@ -284,10 +291,45 @@ input:focus, select:focus, textarea:focus {
     font-weight: 600;
 }
 
+/* == Botão Registrar e login da navbar==*/
+.btn-registrar-nav {
+    background-color:rgb(255, 255, 255);
+    padding: 15px 20px;
+    border-radius: 30px;
+    margin-right: 20px;
+}
+
+.btn-login-nav {
+    border-radius: 30px;
+    padding: 15px 25px;
+    border: 2px solid #fff;
+}
+
+.deco-btn-registrar-nav {
+    text-decoration: none;
+    color: #000;
+    font-family: "Arial";
+    font-weight: 600;
+}
+.deco-btn-login-nav {
+    text-decoration: none;
+    color:rgb(255, 255, 255);
+    font-family: "Arial";
+    font-weight: 600;
+}
+
+.deco-btn-sair-nav {
+    text-decoration: none;
+    color:rgb(255, 255, 255);
+    font-family: "Arial";
+    font-weight: 600;
+    padding-right: 40px;
+}
+
 .btn-index {
     display: flex;
-    align-items: center;
-    margin-top: 50px;
+    align-items: start;
+    margin-right: 20px
 }
 
 /*== div dos textos ==*/
@@ -297,11 +339,44 @@ input:focus, select:focus, textarea:focus {
 }
 
 .title-biblio {
-    font-size: 40px;
+    font-size: 48px;
     font-family: "Arial";
 }
 
 .title-paragrafo {
     font-family: "Arial";
     font-size: 18px;
+    margin-bottom: 50px;
+}
+
+/*== NavBar ==*/
+
+.navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    padding-left: 20px;
+    justify-content: space-between;
+    align-items: center;
+    background-color:rgb(0, 0, 0);
+    color: #fff;
+    font-family: 'Arial';
+}
+
+/*==Divs dos livros==*/
+
+.livro_1 {
+    background-color: #e74c3c;
+    width: 100px;
+    height: 350px;
+}
+
+.bookmark {
+    border-bottom: 60px solid #fff;
+    height: 290px;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+
 }
