--- a/biblioteca/static/css/login_register-estilo.css
+++ b/biblioteca/static/css/login_register-estilo.css
@@ -11,6 +11,7 @@ body {
 
 h2 {
     color: #333;
+    font-family: 'Poppins' sans-serif;
 }
 
 /* Estilo para o formulário */
@@ -27,9 +28,12 @@ form {
 }
 
 label {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    font-size: 1em;
     font-weight: bold;
-    margin-bottom: 5px;
+    color: #34495e;
 }
 
 input[type="text"],
@@ -37,23 +41,35 @@ input[type="email"],
 input[type="password"] {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: 2px solid #bdc3c7;
+    border-radius: 8px;
     box-sizing: border-box;
+    background: #ecf0f1;
+    transition: all 0.3s ease-in-out;
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus {
+    border-color:rgb(182, 215, 237);
+    box-shadow: 0 0 10px rgba(52, 152, 219, 0.3);
+    background: white;
+    outline: none;
 }
 
 button {
     width: 100%;
     padding: 10px;
-    background-color: #4CAF50;
+    background-color:rgb(0, 0, 0);
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    font-size: 18px;
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color:rgb(31, 32, 31);
 }
 
 /* Estilo para mensagens de erro */
