--- a/biblioteca/templates/index.html
+++ b/biblioteca/templates/index.html
@@ -4,8 +4,20 @@
 <head>
     <title>Biblioteca Virtual</title>
     <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
+  <nav class="navbar">
+    <div class="logo">Biblioteca Virtual</div>
+    <div class="btn-index">
+      <div class="btn-registrar-nav">
+        <a class="deco-btn-registrar-nav" href="{% url 'usuario:register' %}">Registro</a> 
+      </div>
+      <div class="btn-login-nav">
+        <a class="deco-btn-login-nav" href="{% url 'usuario:login' %}">Login</a>
+      </div>
+    </div>
+  </nav>
 <div class="index_principal">
   <div class="index_conteudo">
     <div class="titulo">
@@ -25,6 +37,9 @@
     </div>
   </div>
   <div class="index_imagem">
+    <div class="livro_1">
+      <div class="bookmark"></div>
+    </div>
   </div>
 </div>
 </body>
