--- a/biblioteca/apps/usuario/templates/usuario/login.html
+++ b/biblioteca/apps/usuario/templates/usuario/login.html
@@ -25,7 +25,7 @@
         
         <div class="form-group">
           <label for="id_password">Senha:</label>
-          <input type="password" name="password" id="id_password" required>
+          <input type="password" name="password" id="id_password" required placeholder="Digite sua senha">
         </div>
         
         <button type="submit">Entrar</button>
