--- a/biblioteca/static/css/estilos.css
+++ b/biblioteca/static/css/estilos.css
@@ -302,7 +302,8 @@ input:focus, select:focus, textarea:focus {
 .btn-login-nav {
     border-radius: 30px;
     padding: 15px 25px;
-    border: 2px solid #fff;
+    border: 1px solid #fff;
+    margin-right: 20px;
 }
 
 .deco-btn-registrar-nav {
@@ -365,18 +366,7 @@ input:focus, select:focus, textarea:focus {
     font-family: 'Arial';
 }
 
-/*==Divs dos livros==*/
-
-.livro_1 {
-    background-color: #e74c3c;
-    width: 100px;
-    height: 350px;
-}
-
-.bookmark {
-    border-bottom: 60px solid #fff;
-    height: 290px;
-    border-left: 50px solid transparent;
-    border-right: 50px solid transparent;
-
+.imagem-livros {
+    width: 100vh;
+    margin-top: auto;
 }
